--- a/literatur.bib
+++ b/literatur.bib
@@ -4,11 +4,16 @@
                 journal = "Current Opinion in Structural Biology",
                 year = "2009" }
           
-@article{ ptgl1,
-                author = " May et al",
-                title = "PTGL: a database for secondary structure-based protein topologies",
-                journal = "Nucleic Acids Research",
-                year = "2010" }
+@article{ptgl1,
+  title={PTGL: a database for secondary structure-based protein topologies},
+  author={May, Patrick and Kreuchwig, Annika and Steinke, Thomas and Koch, Ina},
+  journal={Nucleic acids research},
+  volume={38},
+  number={suppl 1},
+  pages={D326--D330},
+  year={2010},
+  publisher={Oxford Univ Press}
+}
 
 @InProceedings{vplg,
   author =	{Tim Sch{\"a}fer and Patrick May and Ina Koch},
@@ -37,11 +42,14 @@
 }  
   
   
-@article{new_ptgl,
-               author = {Tim Sch{\"a}fer, Andreas Scheck, Daniel Brune{\"s}, Patrick May and Ina Koch},
-               title = "the new protein topology graph library web server",
-               journal = "Bioinformatics",
-               year = "2015}
+@article{newptgl,
+  title={The new protein topology graph library web server},
+  author={Sch{\"a}fer, Tim and Scheck, Andreas and Brune{\ss}, Daniel and May, Patrick and Koch, Ina},
+  journal={Bioinformatics},
+  pages={btv574},
+  year={2015},
+  publisher={Oxford Univ Press}
+}
           
 @article{ graphletfrequency,
                 author = "N. Prz{\v u}lj et al",
@@ -66,3 +74,14 @@
           title = "Dali: a network tool for protein structure comparison",
           journal = "Trends in Biomedical Sciences",
           year = "1995"}
+          
+@article{pdbefold,
+  title={Secondary-structure matching (SSM), a new tool for fast protein structure alignment in three dimensions},
+  author={Krissinel, E and Henrick, K},
+  journal={Acta Crystallographica Section D: Biological Crystallography},
+  volume={60},
+  number={12},
+  pages={2256--2268},
+  year={2004},
+  publisher={International Union of Crystallography}
+}
